tests/baselines/reference/unusedMultipleParameters2InFunctionDeclaration.errors.txt
tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts(3,9): error TS6133: 'unused' is declared but never used.


==== tests/cases/compiler/unusedMultipleParameters2InFunctionDeclaration.ts (1 errors) ====
    
    function greeter(person: string, person2: string) {
        var unused = 20;
            ~~~~~~
!!! error TS6133: 'unused' is declared but never used.
        person2 = "dummy value";
    }